# Solana-Dex-Token-Ecosystem

./: Anchor.toml  package-lock.json  package.json
crates/common-contracts/: Cargo.toml
crates/common-contracts/src/: constants.rs  errors.rs  lib.rs  math.rs  utils.rs
programs/common/: Cargo.toml
programs/common/src/: lib.rs
programs/dex-core/: Cargo.toml
programs/dex-core/src/: errors.rs  lib.rs  math.rs  state.rs
programs/dex-core/src/instructions/: initialize_pair.rs  mod.rs  swap.rs
programs/knite-solana-contracts/: Cargo.toml
programs/knite-solana-contracts/src/: lib.rs
programs/liquidity-pool/: Cargo.toml
programs/liquidity-pool/src/: errors.rs  lib.rs  state.rs
programs/liquidity-pool/src/instructions/: add_liquidity.rs  create_pool.rs  lock_pool.rs  mod.rs
programs/referral-program/: Cargo.toml
programs/referral-program/src/: errors.rs  lib.rs  state.rs
programs/referral-program/src/instructions/: initialize_config.rs  mod.rs  record_first_swap.rs
programs/token-core/: Cargo.toml
programs/token-core/src/: errors.rs  lib.rs  state.rs
programs/token-core/src/instructions/: initialize.rs  mod.rs  renounce_authority.rs  transfer.rs
programs/treasury-multisig/: Cargo.toml
programs/treasury-multisig/src/: errors.rs  lib.rs  state.rs
programs/treasury-multisig/src/instructions/: approve.rs  execute.rs  initialize.rs  mod.rs  propose.rs
tests/: dex-core.test.js  knite-solana-contracts.js  knite-solana-contracts.ts  liquidity-pool.test.js  referral-program.test.js  token-core.test.js  treasury-multisig.test.js
