[package]
name = "common-contracts"
version = "0.1.0"
description = "Shared utilities/constants/errors for all Knite Solana programs"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "common_contracts"

[features]
default = []
spl = ["dep:anchor-spl"]
idl-build = ["anchor-lang/idl-build", "dep:anchor-spl", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl  = { version = "0.32.1", optional = true }
thiserror = "2.0.18"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
